# reachy_mini_discord_bot

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
docs/: SETUP.md
documents/: doc_reachy_mini_full.md
rag_documents/: doc_reachy_mini_full.md  make_app.md
rag_documents/threads/: Reachy_Mini_Hi.md
reachy_mini_bot/: __init__.py  config.py  discord_bot.py  openai_client.py  rag.py  run.py
reachy_mini_bot/scripts/: ingest.py
